<resources>
    <string name="app_name">FlashAnime</string>
    <string name="app_about">透過看動畫來學習單字，希望大家可以在娛樂中學習，在學習中成長！</string>
    <string name="confirm">確認</string>

    <string name="first_home">首頁</string>
    <string name="first_all">所有動畫</string>
    <string name="first_collected">收藏</string>
    <string name="first_vocabulary">單字</string>
    <string name="first_profile">我的</string>
    <string name="first_profile_unKnow">未知的勇者</string>

    <string name="vocabulary_detail">單字複習</string>
    <string name="word_test">複習中</string>


    <!--tab layout-->
    <string name="first_tab_season">本季新番</string>
    <string name="first_tab_week">週期表</string>

    <!--anime info-->
    <string name="anime_info_title">無職轉生～到了異世界就拿出真本事～</string>
    <string name="anime_info_releaseDateTime">09/11 (一) 01:05</string>
    <string name="anime_info_releaseTime">01:05</string>
    <string name="anime_info_episode">全10集</string>
    <string name="anime_word_List_title">本集單字</string>
    <string name="auto_tracking">自動追蹤</string>

    <!--word test-->
    <string name="default_score">0</string>
    <string name="default_divider">/</string>
    <string name="default_score_denominator">10</string>
    <string name="percentage_format">%d%%</string>
    <string name="finish_know">知道</string>
    <string name="finish_unKnow">仍在學習</string>
    <string name="learning">再複習一下吧：</string>
    <string name="finish_encouragement">表現得很棒！繼續專注在困難的語詞上！！</string>
    <string name="back2words">繼續複習語詞</string>
    <string name="check_words_test_history">查看複習紀錄</string>
    <string name="demo_word">知道往右滑\n不知道往左滑\n點擊卡片可以看解釋</string>
    <string name="demo_word_title">複習方法</string>
    <string name="demo_word_start">(點擊開始)</string>
    <string name="noInstruction">不再顯示教學</string>

    <!-- collected -->
    <string name="no_result">沒有搜尋到結果</string>
    <string name="no_collection">沒有收藏內容</string>


    <!-- word list -->
    <string name="wordsNumber">0001</string>
    <string name="word">これ</string>
    <string name="releaseTime">2023/09/23</string>
    <string name="WordTest">開始複習</string>
    <string name="WordEpisode">第一集</string>
    <string name="test_mode">複習模式：</string>
    <string name="test_episode">挑選集數：</string>
    <string name="test_10">隨機10題：</string>
    <string name="words_all">全部單字</string>
    <string name="words_collected">收藏單字</string>
    <string name="episodeCount">第%d集</string>
    <string name="episodeCountInt">第%s集</string>

    <!-- word dialog -->
    <string name="word_dialog_meaning">語意：</string>

    <!-- allAnime page -->
    <string name="fab_word">分類篩選</string>
    <string name="category">屬性</string>
    <string name="send">送出</string>
    <string name="category_all">全部</string>
    <string name="category_comedy">搞笑</string>
    <string name="category_fantasy">奇幻</string>
    <string name="category_adventure">冒險</string>
    <string name="category_school">校園</string>
    <string name="category_romance">戀愛</string>
    <string name="category_fiction">科幻</string>
    <string name="category_mystery">懸疑</string>


    <!--week-->
    <string name="week_1">週一</string>
    <string name="week_2">週二</string>
    <string name="week_3">週三</string>
    <string name="week_4">週四</string>
    <string name="week_5">週五</string>
    <string name="week_6">週六</string>
    <string name="week_7">週日</string>

    <!-- profile page -->
    <string name="member_name">東東</string>
    <string name="member_info">會員資訊</string>
    <string name="watch_history">觀看紀錄</string>
    <string name="collected_anime">動畫收藏</string>
    <string name="test_history">單字收藏</string>
    <string name="about">關於本軟體</string>
    <string name="logout">登出</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>

    <string name="last_time_watch">上次觀看日期：</string>
    <string name="release_time_text">上架日期：</string>


    <!-- profile page -->
    <string name="google_login">Google 登入</string>
    <string name="google_logout">Google 登出</string>


    <!-- profile page -->
    <string name="collectedWordsAlert_title">尚未收藏單字</string>
    <string name="collectedWordsAlert_message">"這集還沒有收藏單字喔～\n快去加入一些吧！"</string>

    <string name="collectedWordsAlert_positiveButton">確認</string>



    <!-- new Home page -->
    <string name="hot_weeklyHot">本週熱播</string>
    <string name="hot_weeklyAnime">最新更新</string>
    <string name="hot_play">播放</string>
    <string name="hot_collect">收藏</string>

</resources>