<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="animeInfo" type="com.example.flashanime.data.AnimeInfo"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/anime_constrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/new_bg">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="100dp"
            android:layout_height="0dp"
            app:cardCornerRadius="16dp"
            android:backgroundTint="@color/new_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="7:10"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/sample"
                app:imageUrl="@{animeInfo.pictureURL}"/>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:text="@{animeInfo.title}"
            android:textColor="@color/new_text"
            android:textSize="22sp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            app:layout_constraintTop_toTopOf="@+id/imageCardView"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/anime_info_title"/>



        <TextView
            android:id="@+id/episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:text="@{animeInfo.episode}"
            android:textColor="@color/new_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/releaseTimeText"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            tools:text="@string/anime_info_episode"/>

        <TextView
            android:id="@+id/releaseTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:text="@string/release_time_text"
            android:textColor="@color/new_text"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            app:layout_constraintTop_toBottomOf="@+id/episode"/>

        <TextView
            android:id="@+id/releaseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:text="@{animeInfo.releaseTime}"
            android:textColor="@color/new_text"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/releaseTimeText"
            app:layout_constraintTop_toTopOf="@+id/releaseTimeText"
            tools:text="@string/releaseTime"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>