<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="animeInfo" type="com.example.flashanime.data.AnimeInfo"/>
        <variable name="viewModel" type="com.example.flashanime.vocabularydetail.VocabularyDetailViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/anime_constrain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/new_bg">

        <View
            android:id="@+id/dialog_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/new_bg"
            android:elevation="1dp"
            android:alpha="0.6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:text="@{animeInfo.title}"
            android:textColor="@color/new_text"
            android:textSize="30sp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/anime_info_title"/>

        <TextView
            android:id="@+id/test_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:text="@string/test_mode"
            android:textColor="@color/new_text"
            android:textSize="20sp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/test_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:text="@string/test_episode"
            android:textColor="@color/new_text"
            android:textSize="20sp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/test_mode"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/test_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:text="@string/test_10"
            android:textColor="@color/new_text"
            android:textSize="20sp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/test_episode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/underline"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/testButton"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:fontFamily="@font/noto_sans"
            android:layout_marginStart="37dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/WordTest"
            app:backgroundTint="@color/new_secondary"
            app:cornerRadius="5dp"
            app:icon="@drawable/starttest"
            app:layout_constraintBottom_toBottomOf="@+id/test_10"
            app:layout_constraintTop_toTopOf="@+id/test_10"
            app:layout_constraintStart_toEndOf="@+id/test_10"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/BlueTextInputLayout"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/new_secondary"
            android:background="@drawable/tab_indicator"
            app:layout_constraintBottom_toBottomOf="@+id/test_episode"
            app:layout_constraintStart_toEndOf="@+id/test_episode"
            app:layout_constraintTop_toTopOf="@+id/test_episode"
            app:endIconTint="@color/new_accent">

            <AutoCompleteTextView
                android:id="@+id/autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/new_text"
                android:inputType="none"
                android:background="@drawable/bg_autocomplete"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/test_mode"
            app:layout_constraintBottom_toBottomOf="@+id/test_mode"
            app:layout_constraintStart_toEndOf="@+id/test_mode">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mode_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/words_all"
                android:textSize="16sp"
                android:checked="true"
                android:textColor="@color/new_text"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mode_collected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/words_collected"
                android:textSize="16sp"
                android:textColor="@color/new_text"/>
        </RadioGroup>

        <View
            android:id="@+id/underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/new_topic"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/test_10" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/underline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:itemCount="20"
            tools:listitem="@layout/item_word_list_test"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>