<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.flashanime.profile.ProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/blue_constrain"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_round"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    app:cardCornerRadius="100dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/artist_detail_main_pic"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/shirufi"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/member_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_f0f0f0"
                android:padding="20dp"
                android:text="@string/member_info"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blue_constrain" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/watch_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="18dp"
                android:text="@string/watch_history"
                android:textSize="20sp"
                android:letterSpacing="0.1"
                android:textColor="@color/black"
                android:gravity="start"
                android:paddingStart="20dp"
                app:icon="@drawable/arrow_forward"
                app:iconTint="@color/gray_cccccc"
                app:iconSize="25dp"
                app:iconGravity="end"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/member_info"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <View
                android:id="@+id/watch_history_underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="@color/gray_f0f0f0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/watch_history"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/collected_anime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="18dp"
                android:text="@string/collected_anime"
                android:textSize="20sp"
                android:letterSpacing="0.1"
                android:textColor="@color/black"
                android:paddingStart="20dp"
                android:gravity="start"
                app:icon="@drawable/arrow_forward"
                app:iconTint="@color/gray_cccccc"
                app:iconSize="25dp"
                app:iconGravity="end"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/watch_history_underline"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <View
                android:id="@+id/collected_anime_underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="@color/gray_f0f0f0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collected_anime"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/test_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="18dp"
                android:text="@string/test_history"
                android:textSize="20sp"
                android:letterSpacing="0.1"
                android:textColor="@color/black"
                android:paddingStart="20dp"
                android:gravity="start"
                app:icon="@drawable/arrow_forward"
                app:iconTint="@color/gray_cccccc"
                app:iconSize="25dp"
                app:iconGravity="end"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collected_anime_underline"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <View
                android:id="@+id/test_history_underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="@color/gray_f0f0f0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/test_history"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="18dp"
                android:text="@string/about"
                android:textSize="20sp"
                android:letterSpacing="0.1"
                android:textColor="@color/black"
                android:paddingStart="20dp"
                android:gravity="start"
                app:icon="@drawable/arrow_forward"
                app:iconTint="@color/gray_cccccc"
                app:iconSize="25dp"
                app:iconGravity="end"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/test_history_underline"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>


            <View
                android:id="@+id/about_underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="@color/gray_f0f0f0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="18dp"
                android:text="@string/logout"
                android:textSize="20sp"
                android:letterSpacing="0.1"
                android:textColor="@color/black"
                android:paddingStart="20dp"
                android:gravity="start"
                app:icon="@drawable/arrow_forward"
                app:iconTint="@color/gray_cccccc"
                app:iconSize="25dp"
                app:iconGravity="end"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_underline"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>